# mangacollec_qt

./: .env  Dockerfile  main.py  pyproject.toml
app/: app_kernel.py  main_.py  ui_widget.py
app/IHM/components/: icon_widget.py  splash_screen.py
app/IHM/ui/: collection.ui  collection_page.ui  header_news.ui  info_collection.ui  info_lecture_volume_wiget.ui  item_collection.ui  item_lecture.ui  item_news.ui  left_menu.ui  main.ui  search_header.ui  ui_collection_page.py  ui_header_news.py  ui_info_collection.py  ui_info_lecture_volume_wiget.py  ui_item_collection.py  ui_item_lecture.py  ui_item_news.py  ui_search_header.py  ui_user_page.py  untitled.ui  user_page.ui  user_page_ui.py
app/IHM/views/: account_page.py  collection_page.py  home_page.py  news_page.py  panier_page.py  planning_page.py  search_page.py
app/IHM/widgets/: combo_box.py  view_list_item_news_widget.py
app/IHM/widgets/headers/: header_news.py  header_news_ui.py  size_delegate_combo_box_publisher.py
app/Metier/: item_collection.py  news_item_model.py  subscription.py  user.py
app/assets/: resource.qrc  resources.py
app/assets/img/: source.qrc
app/mangacollec/: __init__.py  mangacollec.py  mangacollec_interface.py
app/src/utils/: const.py  debug.py  image_utils.py  img_downloader.py  pages_utils.py
shooterQT/lib/: abstract_page.py  kernel.py  main_page.py  page_interface.py  ui_interface.py  uic_interface.py  widget_interface.py
shooterQT/lib/dependency_injection/: container.py  container_interface.py
shooterQT/lib/router/: route.py  router.py  router_interface.py
(+20 files in other folders)
